Issues#index:empty - left-align all content

--- a/app/assets/stylesheets/snowcrash/modules/issues.scss
+++ b/app/assets/stylesheets/snowcrash/modules/issues.scss
@@ -90,7 +90,6 @@ body.issues.index {
   //-------------------------------------------------------- Empty-state styles
   p.lead {
     margin: 1ex 0;
-    text-align: center;
   }
 
   .add-issues {
